5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1758_1189.log
== TEST (2019-05-28 10:46:38) 
-- CODE:
x = input()
x = replace(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = replace(x)
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:59) 
-- CODE:
from numpy import*
x = input()
x = replace(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:47:16) 
-- CODE:
from numpy import*
x = input()
x = x.replace()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:51:16) 
-- CODE:
from numpy import*
x = input()
y = filter(" ", x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:51:33) 
-- CODE:
from numpy import*
x = input()
y = filter(" ", x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:13) 
-- CODE:
from numpy import*
x = input()
x = str.replace(" ","")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:55) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:59:13) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[len-i]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- EXECUTION TIME:
0.372758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    if x[i]!=x[len-i]:
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:59:15) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[len-i]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:59:50) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[len(x)-i]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:05) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[-i-1]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:15) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[-i-1]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:01:26) 
-- CODE:
from numpy import*
x = input()
x = x.replace(" ","")
i = 0
r = 1
while i<len(x):
	if x[i]!=x[-i-1]:
		r=0
		break
	i+=1
print(x.upper())
print(r)
	
-- EXECUTION TIME:
0.424647
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
